# query-engine-from-scratch

./: .gitignore  README.md  UNDERSTANDING.md  pyproject.toml  shell.nix
data/: sample_1.parquet  sample_1.py
engine/: handwritten.py  stage1_handwritten.py  stage2_table_scan.py  stage3_volcano.py  stage4_volcano_2.py  stage5_volcano_3.py  stage6_volcano_4.py  stage7_aggregate.py  stage8_vectorized.py
tests/: test_setup_working.py  test_stage1.py
